sync browser with en-US

--- a/id/browser/chrome/browser/browser.properties
+++ b/id/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Jangan tampilkan pesan ini saat pop-up diblok
 popupWarningDontShowFromLocationbar=Jangan tampilkan bilah info saat pop-up diblok
 popupShowPopupPrefix=Tampilkan '%S'
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S memblokir konten pada laman ini.
+badContentBlocked.notblocked.message=%S tidak memblokir konten apa pun pada laman ini.
+
 # missing plugin installer
 installPlugin.message = Ingin menginstal plugin yang dibutuhkan untuk menampilkan media pada laman ini?
 installPlugin.button.label=Instal %S
@@ -444,6 +449,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Ingin menginstal "%1$S" dari situs ini (%2$S)?
 webapps.install.success = Aplikasi Diinstal
 webapps.install.inprogress = Sedang menginstal
+webapps.uninstall = Hapus instalasi
+webapps.uninstall.accesskey = H
+webapps.doNotUninstall = Jangan Hapus
+webapps.doNotUninstall.accesskey = J
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Ingin menghapus instalasi "%1$S"?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S kini dalam mode layar penuh.
@@ -504,10 +515,24 @@ getUserMedia.shareMicrophone.message = Ingin berbagi mikrofon Anda dengan %S?
 getUserMedia.shareScreen.message = Ingin berbagi layar Anda dengan %S?
 getUserMedia.shareCameraAndMicrophone.message = Ingin berbagi kamera dan mikrofon Anda dengan %S?
 getUserMedia.shareScreenAndMicrophone.message = Ingin berbagi mikrofon dan layar Anda dengan %S?
+getUserMedia.selectWindow.label=Jendela untuk dibagikan:
+getUserMedia.selectWindow.accesskey=J
+getUserMedia.selectScreen.label=Layar untuk dibagikan:
+getUserMedia.selectScreen.accesskey=L
+getUserMedia.selectApplication.label=Aplikasi untuk dibagikan:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Tidak Ada Video
-getUserMedia.noWindowOrScreen.label = Tidak Ada Jendela atau Layar
 getUserMedia.noAudio.label = Tidak Ada Audio
+getUserMedia.noApplication.label = Tidak Ada Aplikasi
+getUserMedia.noScreen.label = Tidak Ada Layar
+getUserMedia.noWindow.label = Tidak Ada Jendela
 getUserMedia.shareEntireScreen.label = Seluruh layar
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 jendela);#1 (#2 jendela)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -515,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Seluruh layar
 getUserMedia.shareSelectedDevices.label = Bagikan Perangkat Terpilih;Bagikan Perangkat Terpilih
 getUserMedia.shareSelectedDevices.accesskey = T
 getUserMedia.shareScreen.label = Bagikan Layar
+getUserMedia.shareApplication.label = Bagikan Aplikasi Terpilih
 getUserMedia.shareWindow.label = Bagikan Jendela Terpilih
 getUserMedia.shareSelectedItems.label = Bagikan Item Terpilih
 getUserMedia.always.label = Selalu Bagikan
@@ -526,6 +552,7 @@ getUserMedia.never.accesskey = P
 getUserMedia.sharingCamera.message2 = Anda sedang berbagi kamera Anda dengan laman ini.
 getUserMedia.sharingMicrophone.message2 = Anda sedang berbagi mikrofon Anda dengan laman ini.
 getUserMedia.sharingCameraAndMicrophone.message2 = Anda sedang berbagi kamera dan mikrofon Anda dengan laman ini.
+getUserMedia.sharingApplication.message = Anda sedang berbagi aplikasi dengan laman ini.
 getUserMedia.sharingScreen.message = Anda sedang berbagi layar Anda dengan laman ini.
 getUserMedia.sharingWindow.message = Anda sedang berbagi sebuah jendela Anda dengan laman ini.
 getUserMedia.continueSharing.label = Tetap Berbagi
@@ -533,13 +560,34 @@ getUserMedia.continueSharing.accesskey = T
 getUserMedia.stopSharing.label = Hentikan Berbagi
 getUserMedia.stopSharing.accesskey = H
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S telah memblokir konten yang tidak aman.
-mixedContentBlocked.keepBlockingButton.label = Tetap Blokir
-mixedContentBlocked.keepBlockingButton.accesskey = B
-mixedContentBlocked.unblock.label = Nonaktifkan Perlindungan pada Laman Ini
-mixedContentBlocked.unblock.accesskey = d
+getUserMedia.sharingMenu.label = Tabs sharing devices
+getUserMedia.sharingMenu.accesskey = d
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (kamera)
+getUserMedia.sharingMenuMicrophone = %S (mikrofone)
+getUserMedia.sharingMenuApplication = %S (aplikasi)
+getUserMedia.sharingMenuScreen = %S (layar)
+getUserMedia.sharingMenuWindow = %S (jendela)
+getUserMedia.sharingMenuCameraMicrophone = %S (kamera dan mikrofon)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon, dan aplikasi)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon, dan layar)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon, dan jendela)
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dan aplikasi)
+getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon dan layar)
+getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon dan jendela)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Sumber tidak dikenal
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = Tampaknya %S dimulai… dengan… sangat… lambat….
