--- a/id/browser/chrome/browser/devtools/webconsole.properties
+++ b/id/browser/chrome/browser/devtools/webconsole.properties
@@ -248,3 +248,19 @@ selfxss.okstring=izinkan penempelan
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Tampilkan/sembunyikan detail pesan.
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 slot kosong;#1 slot kosong
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(indeks)
+table.iterationIndex=(indeks iterarsi)
+table.key=Kunci
+table.value=Nilai
