--- a/id/browser/chrome/browser/loop/loop.properties
+++ b/id/browser/chrome/browser/loop/loop.properties
@@ -6,36 +6,264 @@
 
 share_link_header_text=Bagikan tautan ini untuk mengundang seseorang ke percakapan:
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Siapa yang Anda undang?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=Masa berlaku undangan akan habis dalam {{expiry_time}} hari;Masa berlaku undangan akan habis dalam {{expiry_time}} hari
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=Masa berlaku undangan akan habis dalam {{expiry_time}} jam;Masa berlaku undangan akan habis dalam {{expiry_time}} jam
+
 # Status text
+display_name_guest=Tamu
 display_name_dnd_status=Jangan Diganggu
 display_name_available_status=Tersedia
 
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Maaf, kami tidak dapat mengambil URL panggilan.
+session_expired_error_description=Sesi telah kedaluwarsa. Semua URL yang Anda buat dan bagikan tidak akan berfungsi lagi.
+could_not_authenticate=Tidak Dapat Mengautentikasi
+password_changed_question=Sandi telah diganti?
+try_again_later=Coba lagi nanti
+could_not_connect=Tidak Dapat Tersambung ke Server
+check_internet_connection=Periksa sambungan Internet Anda
+login_expired=Info Masuk Anda Telah Kedaluwarsa
+service_not_available=Saat Ini Layanan Tidak Tersedia
+problem_accessing_account=Terjadi Kesalahan Saat Mengakses Akun Anda
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Coba Lagi
+
+share_email_subject3=Anda telah diundang ke percakapan
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Untuk menerima undangan ini, salin atau klik tautan ini untuk memulai percakapan Anda:\r\n\r\n{{callUrl}}
+share_button=Email
+copy_url_button=Salin
+copied_url_button=Disalin!
+
+panel_footer_signin_or_signup_link=Masuk atau Daftar
+
+settings_menu_item_account=Akun
+settings_menu_item_settings=Setelan
+settings_menu_item_signout=Keluar
+settings_menu_item_signin=Masuk
+settings_menu_button_tooltip=Setelan
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=Cari…
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Kontak Baru
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Nama
+new_contact_email_placeholder=Email
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+add_contact_button=Tambahkan Kontak
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+valid_email_text_description=Masukkan alamat email yang vali
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Tambahkan atau Impor Kontak
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+import_contacts_button=Impor
+importing_contacts_progress_button=Mengimpor…
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Sinkronkan Kontak
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Maaf, proses impor kontak gagal
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Maaf, proses impor kontak gagal. Kunjungi {{import_failed_support_link_label}} kami untuk mendapatkan bantuan
+import_failed_support_link_label=situs dukungan
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Hapus Kontak
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+confirm_delete_contact_alert=Yakin akan menghapus kontak ini?
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Hapus Kontak
+confirm_delete_contact_cancel_button=Batalkan
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Blokir Kontak
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Hapus Blokir Kontak
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Edit Kontak…
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Edit Kontak
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Nama
+edit_contact_email_label=Email
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Selesai
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Percakapan Audio
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Percakapan Video
 
 # Conversation Window Strings
 
-incoming_call_title=Panggilan Masuk…
-incoming_call=Panggilan Masuk
-incoming_call_answer_button=Jawab
-incoming_call_decline_button=Tolak
-incoming_call_ignore_button=Abaikan
+initiate_call_button_label2=Siap memulai perckaapan Anda?
+incoming_call_title2=Permintaan Percakapan
+incoming_call_accept_button=Terima
+incoming_call_accept_audio_only_tooltip=Terima dengan audio
+incoming_call_cancel_button=Batalkan
+incoming_call_cancel_and_block_button=Batalkan dan Blokir
 incoming_call_block_button=Blokir
 hangup_button_title=Putuskan
+hangup_button_caption2=Keluar
 mute_local_audio_button_title=Nonaktifkan audio Anda
 unmute_local_audio_button_title=Aktifkan audio Anda
 mute_local_video_button_title=Nonaktifkan video Anda
 unmute_local_video_button_title=Aktifkan video Anda
 
-peer_ended_conversation=Your peer ended the conversation.
-call_has_ended=Panggilan berakhir.
-close_window=Tutup jendela ini
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Percakapan dengan {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Mulai percakapan?
+initiate_audio_video_call_button2=Mulai
+initiate_audio_video_call_tooltip2=Mulai percakpaan video
+initiate_audio_call_button2=Percakpaan audio
+initiate_call_cancel_button=Batalkan
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Menyambungkan…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Memanggil…
+
+peer_ended_conversation2=Orang yang Anda panggil telah memutuskan percakapan.
+conversation_has_ended=Percakapan Anda telah berakhir.
+restart_call=Gabung Kembali
+
+generic_failure_title=Terjadi masalah.
+generic_failure_with_reason2=Anda dapat mencoba lagi atau mengirimkan email tautan untuk dipanggil kembali nanti.
+generic_failure_no_reason2=Ingin mencoba lagi?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Orang ini luring
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=Panggilan Anda tidak sampai.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Coba Lagi
+email_link_button=Kirimkan Tautan lewat Email
+cancel_button=Batalkan
 
 cannot_start_call_session_not_ready=Tidak dapat memulai panggilan, sesi tidak siap.
 network_disconnected=Sambungan jaringan terputus tiba-tiba.
+connection_error_see_console_notification=Panggilan gagal, liat konsol untuk melihat detail.
 
-connection_error_see_console_notification=Panggilan gagal;lihat konsol untuk detail.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Dengan menggunakan produk ini, Anda menyetujui <a \
-  target="_blank" href="{{terms_of_use_url}}">Persyaratan Layanan</a> dan <a \
-  href="{{privacy_notice_url}}">Kebijakan Privasi</a>.
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=Dengan menggunakan {{clientShortname}} Anda menyetujui {{terms_of_use}} \
+  dan {{privacy_notice}}.
+legal_text_tos = Persyaratan Layanan
+legal_text_privacy = Pernyataan Privasi
+client_shortname_fallback=produk ini
+
+feedback_call_experience_heading2=Bagaimana kualitas percakapan Anda?
+feedback_what_makes_you_sad=Apa yang membuat Anda tidak suka?
+feedback_thank_you_heading=Terima kasih atas masukkannya!
+feedback_category_audio_quality=Kualitas audio
+feedback_category_video_quality=Kualitas video
+feedback_category_was_disconnected=Terputus
+feedback_category_confusing=Membingungkan
+feedback_category_other=Lainnya:
+feedback_custom_category_text_placeholder=Apa yang terjadi?
+feedback_submit_button=Kirim
+feedback_back_button=Kembali
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Jendela ini akan tertutup dalam {{countdown}} detik;Jendela ini akan tertutup dalam {{countdown}} detik
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Gabung Kembali
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Laporkan pengguna
