--- a/id/browser/chrome/browser/preferences/preferences.properties
+++ b/id/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Kuki berikut ini tersimpan dalam komputer Anda:
 cookiesFiltered=Kuki berikut ini cocok dengan pencarian Anda:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Hapus data situs web luring
 offlineAppRemovePrompt=Setelah menghapus data ini, %S tidak dapat tersedia pada mode luring. Yakin akan menghapus data mode luring untuk situs web ini?
 offlineAppRemoveConfirm=Hapus data luring
