--- a/id/browser/chrome/browser/shellservice.properties
+++ b/id/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=&Pengaturan %S
 safeModeLabel=%S Mode &Aman
-setDefaultBrowserTitle=Atur menjadi Program Peramban Web Baku
-setDefaultBrowserMessage=%S belum ditetapkan menjadi program peramban web baku perangkat Anda. Apakah Anda ingin menjadikannya program peramban web baku?
-setDefaultBrowserDontAsk=Selalu lakukan pemeriksaan ini saat memulai %S.
-alreadyDefaultBrowser=%S telah ditetapkan sebagai program peramban web baku perangkat Anda.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Dapatkan manfaat maksimal %S dengan menjadikannya peramban web baku sistem Anda
+setDefaultBrowserConfirm.label     = Gunakan %S sebagai peramban web baku
+setDefaultBrowserConfirm.accesskey = G
+setDefaultBrowserOptions.label     = Opsi
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Jangan Sekarang
+setDefaultBrowserNotNow.accesskey  = S
+setDefaultBrowserNever.label       = Jangan Tanya Lagi
+setDefaultBrowserNever.accesskey   = T
+
+
 desktopBackgroundLeafNameWin=Gambar Latar Belakang Desktop.bmp
 DesktopBackgroundDownloading=Menyimpan Gambar…
 DesktopBackgroundSet=Jadikan sebagai Latar Belakang Desktop
