--- a/id/browser/chrome/browser/webrtcIndicator.properties
+++ b/id/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Indikator Berbagi
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Kamera dan mikrofon Anda sedang dibagikan. Klik untuk mengendalikan berbagi.
 webrtcIndicator.sharingCamera.tooltip              = Kamera Anda sedang dibagikan. Klik untuk mengendalikan berbagi.
 webrtcIndicator.sharingMicrophone.tooltip          = Mikrofon Anda sedang dibagikan. Klik untuk mengendalikan berbagi.
+webrtcIndicator.sharingApplication.tooltip = Sebuah aplikasi sedang dibagikan. Klik untuk mengendalikan berbagi.
 webrtcIndicator.sharingScreen.tooltip = Layar Anda sedang dibagikan. Klik untuk mengendalikan berbagi.
 webrtcIndicator.sharingWindow.tooltip = Sebuah jendela sedang dibagikan. Klik untuk mengendalikan berbagi.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Sebuah jendela sedang dibagikan. Klik un
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Berbagi Kamera dengan "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Berbagi Mikrofon dengan "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Berbagi Sebuah Aplikasi dengan "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Berbagi Layar dengan "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Berbagi Sebuah Jendela dengan "%S"
 webrtcIndicator.controlSharing.menuitem = Kendalikan Berbagi
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Berbagi Kamera dengan #1 tab;Berbagi Kamera dengan #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Berbagi Mikrofon dengan #1 tab;Berbagi Mikrofon dengan #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Berbagi Sebuah Aplikasi dengan #1 tab;Berbagi Sebuah Aplikasi dengan  #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Berbagi Layar dengan #1 tab;Berbagi Layar dengan #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Berbagi Sebuah Jendela dengan #1 tab;Berbagi Sebuah Jendela dengan #1 tab
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
