--- a/id/dom/chrome/dom/dom.properties
+++ b/id/dom/chrome/dom/dom.properties
@@ -204,3 +204,4 @@ KeyNameZoomWarning=Nilai KeyboardEvent.key "Zoom" sudah usang dan akan diganti n
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=Nilai KeyboardEvent.key values starting with "Dead" are obsolete and will be merged into just "Dead". Untuk bantuan kunjungi https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Mengimpor simpul XUL ke dokumen konten tidak disarankan lagi. Fungsionalitas ini akan dihapus segera.
+XMLDocumentLoadPrincipalMismatch=Penggunaan document.load dilarang pada Document yang berasal dari Window lainnya. Hanya Window yang menjadi tempat dibuatnya Document yang diizinkan untuk memanggil .load pada Document tersebut. Disarankan untuk menggunakan XMLHttpRequest.
