--- a/id/dom/chrome/security/csp.properties
+++ b/id/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Percobaan untuk memanggil JavaScript dari string (deng
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Menginterpretasikan %1$S sebagai nama host, bukan sebagai kata kunci. Jika Anda menginginkannya sebagai kata kunci, tulis sebagai '%2$S' (diapit dengan tanda kutip tunggal).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Direktif '%1$S' tidak didukung. Direktif dan nilainya akan diabaikan.
 
 # CSP Errors:
 policyURINotAlone = Direktif policy-uri hanya dapat tampil mandiri
