--- a/id/toolkit/chrome/global/aboutSupport.properties
+++ b/id/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Parameter ClearType tidak ditemukan
 adapterDescription = Deksripsi Adapter
 adapterVendorID = ID Vendor
 adapterDeviceID = ID Perangkat
+adapterSubsysID = ID Subsistem
 adapterDrivers = Penggerak Adapter
 adapterRAM = RAM Adapter
 driverVersion = Versi Penggerak
@@ -71,6 +72,7 @@ driverDate = Tanggal Penggerak
 adapterDescription2 = Deksripsi Adapter (GPU #2) 
 adapterVendorID2 = ID Vendor (GPU #2) 
 adapterDeviceID2 = ID Perangkat (GPU #2)
+adapterSubsysID2 = ID Subsistem (GPU #2)
 adapterDrivers2 = Penggerak Adapter (GPU #2)
 adapterRAM2 = RAM Adapter (GPU #2)
 driverVersion2 = Versi Driver (GPU #2)
