--- a/id/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/id/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -93,3 +93,9 @@ quit-button.tooltiptext.linux2 = Keluar dari %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Keluar dari %1$S (%2$S)
+
+panic-button.label = Lupakan
+panic-button.tooltiptext = Lupakan beberapa riwayat penjelahan
+
+loop-call-button.label = Undang seseorang ke percakapan
+loop-call-button.tooltiptext = Undang seseorang ke percakapan
