--- a/id/browser/chrome/browser/devtools/profiler.properties
+++ b/id/browser/chrome/browser/devtools/profiler.properties
@@ -13,15 +13,15 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
-profiler.label=Profiler
+profiler.label2=Kinerja
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
-profiler.panelLabel=Panel Profiler
+profiler.panelLabel2=Panel Kinerja
 
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
-profiler2.commandkey=VK_F5
+profiler.commandkey2=VK_F5
 profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
@@ -29,90 +29,76 @@ profiler.accesskey=P
 # displayed inside the developer tools window.
 profiler.tooltip2=Profiler JavaScript
 
-# LOCALIZATION NOTE (profiler.profileName):
-# This string is the default name for new profiles. Its parameter is a number.
-# For example: "Profile 1", "Profile 2", etc.
-profiler.profileName=Profil %S
+# LOCALIZATION NOTE (noRecordingsText): The text to display in the
+# recordings menu when there are no recorded profiles yet.
+noRecordingsText=Belum ada profil.
 
-# LOCALIZATION NOTE (profiler.completeProfile):
-# This string is displayed as a tab in the profiler UI. Clicking on it
-# displays everything that the profiler has generated so far.
-profiler.completeProfile=Profil Lengkap
+# LOCALIZATION NOTE (recordingsList.itemLabel):
+# This string is displayed in the recordings list of the Profiler,
+# identifying a set of function calls.
+recordingsList.itemLabel=Merekan #%S
 
-# LOCALIZATION NOTE (profiler.sampleRange):
-# This string is displayed as a tab in the profiler UI. Clicking on it
-# displays a sample range of data selected by user themselves.
-profiler.sampleRange=Rentang Contoh
+# LOCALIZATION NOTE (recordingsList.recordingLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for an item that has not finished recording.
+recordingsList.recordingLabel=Sedang diproses…
 
-# LOCALIZATION NOTE (profiler.runningTime):
-# This string is displayed as a table header in the profiler UI.
-profiler.runningTime=Waktu Dijalankan
+# LOCALIZATION NOTE (recordingsList.durationLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for an item that has finished recording.
+recordingsList.durationLabel=%S md
 
-# LOCALIZATION NOTE (profiler.self):
-# This string is displayed as a table header in the profiler UI.
-# "Self" is how much time was spent doing work directly in that function.
-# As opposed to the total time which is how much time was spent in that
-# function and in functions it called.
-profiler.self=Diri Sendiri
+# LOCALIZATION NOTE (recordingsList.saveLabel):
+# This string is displayed in the recordings list of the Profiler,
+# for saving an item to disk.
+recordingsList.saveLabel=Simpan
 
-# LOCALIZATION NOTE (profiler.symbolName)
-# This string is displayed as a table header in the profiler UI.
-profiler.symbolName=Nama Simbol
+# LOCALIZATION NOTE (profile.tab):
+# This string is displayed in the profile view for a tab, after the
+# recording has finished, as the recording 'start → stop' range in milliseconds.
+profile.tab=%1$S md → %2$S md
 
-# LOCALIZATION NOTE (profiler.start)
-# This string is displayed on the button that starts the profiler.
-profiler.start=Mulai
+# LOCALIZATION NOTE (graphs.fps):
+# This string is displayed in the framerate graph of the Profiler,
+# as the unit used to measure frames per second. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.fps=fps
 
-# LOCALIZATION NOTE (profiler.stop)
-# This string is displayed on the button that stops the profiler.
-profiler.stop=Hentikan
+# LOCALIZATION NOTE (category.*):
+# These strings are displayed in the categories graph of the Profiler,
+# as the legend for each block in every bar. These labels should be kept
+# AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.other=Gecko
+category.css=Gaya
+category.js=JIT
+category.gc=GC
+category.network=Jaringan
+category.graphics=Grafik
+category.storage=Penyimpanan
+category.events=Input & Peristiwa
 
-# LOCALIZATION NOTE (profiler.loading)
-# This string is displayed above the progress bar when the profiler
-# is busy loading and parsing the report.
-profiler.loading=Memuat profil…
+# LOCALIZATION NOTE (table.root):
+# This string is displayed in the call tree for the root node.
+table.root=(akar)
 
-# LOCALIZATION NOTE (profiler.stateIdle)
-# This string is used to show that the profile in question is in IDLE
-# state meaning that it hasn't been started yet.
-profiler.stateIdle=Diam
+# LOCALIZATION NOTE (table.url.tooltiptext):
+# This string is displayed in the call tree as the tooltip text for the url
+# labels which, when clicked, jump to the debugger.
+table.url.tooltiptext=Tampilkan kode sumber di Debugger
 
-# LOCALIZATION NOTE (profiler.stateRunning)
-# This string is used to show that the profile in question is in RUNNING
-# state meaning that it has been started and currently gathering profile data.
-profiler.stateRunning=Berjalan
+# LOCALIZATION NOTE (table.zoom.tooltiptext):
+# This string is displayed in the call tree as the tooltip text for the 'zoom'
+# buttons (small magnifying glass icons) which spawn a new tab.
+table.zoom.tooltiptext=Inspeksi bingkai dalam tab baru
 
-# LOCALIZATION NOTE (profiler.stateCompleted)
-# This string is used to show that the profile in question is in COMPLETED
-# state meaning that it has been started and stopped already.
-profiler.stateCompleted=Selesai
+# LOCALIZATION NOTE (recordingsList.saveDialogTitle):
+# This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Simpan profil…
 
-# LOCALIZATION NOTE (profiler.sidebarNotice)
-# This string is displayed in the profiler sidebar when there are no
-# existing profiles to show (usually happens when the user opens the
-# profiler for the first time).
-profiler.sidebarNotice=Masih belum ada profil.
+# LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
+# This string is displayed as a filter for saving a recording to disk.
+recordingsList.saveDialogJSONFilter=Berkas JSON
 
-
-# LOCALIZATION NOTE (profiler.startProfilerString)
-# This string is displayed on the profiler button when no active
-# profiling sessions are running
-profiler.startProfilerString=Mulai proses pemrofilan
-
-# LOCALIZATION NOTE (profiler.stopProfilerString)
-# This string is displayed on the profiler button when an active
-# profiling session is running
-profiler.stopProfilerString=Hentikan proses pemrofilan
-
-# LOCALIZATION NOTE (profiler.save)
-# This string is displayed as a label for a button that opens a Save File
-# dialog where user can save generated profiler to a file.
-profiler.save=Simpan
-
-# LOCALIZATION NOTE (profiler.saveFileAs)
-# This string as a title for a Save File dialog.
-profiler.saveFileAs=Simpan dengan Nama
-
-# LOCALIZATION NOTE (profiler.openFile)
-# This string as a title for a Open File dialog.
-profiler.openFile=Impor Profil
+# LOCALIZATION NOTE (recordingsList.saveDialogAllFilter):
+# This string is displayed as a filter for saving a recording to disk.
+recordingsList.saveDialogAllFilter=Semua Berkas
