--- a/id/browser/chrome/browser/devtools/scratchpad.properties
+++ b/id/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Panel Scratchpad
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Scratchpad
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Peringatan Scam: Berhati-hatilah jika menempelkan hal-hal yang tidak Anda mengerti. Ini dapat mengakibatkan penyerang mencuri informasi pribadi Anda atau mengambil alih kendali komputer Anda. Ketikkan '%S' pada scratchpad di bawah ini untuk mengizinkan penempelan.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=izinkan copas
