--- a/id/browser/chrome/browser/newTab.properties
+++ b/id/browser/chrome/browser/newTab.properties
@@ -5,6 +5,34 @@
 newtab.pin=Jadikan situs ini permanen di tempat ini
 newtab.unpin=Jangan jadikan situs ini permanen di tempat ini
 newtab.block=Hapus situs ini
-newtab.show=Tampilkan laman tab baru
-newtab.hide=Sembunyikan laman tab baru
-newtab.sponsored=Tampilkan informasi tentang ubin bersponsor
+
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+newtab.pin=Jadikan situs ini permanen di tempat ini
+newtab.unpin=Jangan jadikan situs ini permanen di tempat ini
+newtab.block=Hapus situs ini
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=BERSPONSOR
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Ubin ini ditampilkan untuk Anda atas nama mitra Mozilla. Anda dapat menghapusnya kapan saja dengan mengeklik tombol %1$S. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=A Mozilla partner has visually enhanced this tile, replacing the screenshot. You can turn off enhanced tiles by clicking the %1$S button for your preferences. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=When you open a new tab, you’ll see tiles from the sites you frequently visit, along with tiles that we think might be of interest to you. Some of these tiles may be sponsored by Mozilla partners. We’ll always indicate to you which tiles are sponsored. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=In order to provide this service, Mozilla collects and uses certain analytics information relating to your use of the tiles in accordance with our %1$S.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=You can turn off the tiles feature by clicking the %1$S button for your preferences.
+newtab.learn.link=Pelajari lebih lanjut…
+newtab.privacy.link=Privacy Notice
