--- a/id/security/manager/chrome/pipnss/nsserrors.properties
+++ b/id/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Sandi terkunci.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Galat PKCS #11 tidak dikenal.
 SEC_ERROR_BAD_CRL_DP_URL=URL tidak valid atau tidak didukung pada nama titik distribusi KRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Sertifikat ditandatangani dengan algoritma tandatangan yang dinonaktifkan karena tidak aman.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Server menggunakan key pinning (HPKP) tetapi tidak ada rantai sertifikat dipercaya yang dapat dibangun yang sesuai dengan pinset. Pelanggaran key pinning tidak dapat ditimpa.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Server menggunakan sertifikat dengan ekstensi kendala dasar yang mengidentifikasi sebagai otoritas sertifikat. Hal ini salah untuk sertifikat yang diterbitkan dengan benar.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Server menggunakan sertifikat dengan ukuran kunci yang terlalu kecil untuk membuat sambungan aman.
