--- a/id/webapprt/webapprt/webapp.properties
+++ b/id/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Instal %S
 webapps.install.description=Ingin menginstal %S?
 webapps.install.install=Instal Aplikasi
 webapps.install.dontinstall=Jangan Instal
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Hapus Instalasi %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Ingin menghapus instalasi %S?
+webapps.uninstall.uninstall=Hapus Instalasi Aplikasi
+webapps.uninstall.dontuninstall=Jangan Hapus Instalasi
 
 paymentDialog.title=Pembayaran
 paymentDialog.message=Jasa penyedia pembayaran mana yang ingin Anda gunakan?
