sync mobile with en-US

--- a/id/mobile/android/chrome/browser.properties
+++ b/id/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Instal
 
 # Alerts
 alertAddonsDownloading=Mengunduh pengaya
-alertAddonsInstalledNoRestart=Instalasi selesai
 alertAddonsFail=Instalasi gagal
+alertAddonsInstalledNoRestart.message=Instalasi selesai
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=PENGAYA
 
 alertDownloadsStart2=Memulai unduhan
 alertDownloadsDone2=Unduhan selesai
@@ -19,6 +23,9 @@ alertDownloadsToast=Unduhan dimulai…
 alertDownloadsPause=Jeda
 alertDownloadsResume=Lanjutkan
 alertDownloadsCancel=Batalkan
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Pengunduhan dinonaktifkan dalam sesi tamu
 
 alertFullScreenToast=Tekan KEMBALI untuk meninggalkan mode layar penuh
 
@@ -116,6 +123,36 @@ contacts.ask=Izinkan %S untuk mengakses kontak Anda?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Jangan tanya lagi untuk situs ini
 
+# Device Storage API
+deviceStorageMusic.allow=Izinkan
+deviceStorageMusic.dontAllow=Jangan izinkan
+deviceStorageMusic.ask=Izinkan %S untuk mengakses musik Anda?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Jangan tanya lagi untuk situs ini
+
+deviceStoragePictures.allow=Izinkan
+deviceStoragePictures.dontAllow=Jangan izinkan
+deviceStoragePictures.ask=Izinkan %S untuk mengakses gambar Anda?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Jangan tanya lagi untuk situs ini
+
+deviceStorageSdcard.allow=Izinkan
+deviceStorageSdcard.dontAllow=Jangan izinkan
+deviceStorageSdcard.ask=Izinkan %S untuk mengakses penyimpanan eksternal?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Jangan tanya lagi untuk situs ini
+
+deviceStorageVideos.allow=Izinkan
+deviceStorageVideos.dontAllow=Jangan izinkan
+deviceStorageVideos.ask=Izinkan %S untuk mengakses video Anda?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Jangan tanya lagi untuk situs ini
+
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +212,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Teks disalin ke papan klip
 
 # Casting
-casting.prompt=Teruskan ke Perangkat
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Kirim ke Perangkat
+casting.mirrorTab=Cerminkan Tab
+casting.mirrorTabStop=Hentikan Pencerminan
 
 # Context menu
 contextmenu.openInNewTab=Buka Tautan di Tab Baru
@@ -209,7 +250,9 @@ contextmenu.unmute=Suarakan
 contextmenu.saveVideo=Simpan Video
 contextmenu.saveAudio=Simpan Audio
 contextmenu.addToContacts=Tambahkan ke Kontak
-contextmenu.castToScreen=Teruskan ke Layar
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Kirim ke Perangkat
 
 contextmenu.copy=Salin
 contextmenu.cut=Potong
@@ -341,3 +384,9 @@ browser.menu.context.mailto = Email
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Pilih feed
 feedHandler.subscribeWith=Langgan dengan
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S sudah usang. Gunakan %S
