--- a/id/mobile/android/chrome/webapp.properties
+++ b/id/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 pembaruan gagal;#1 pembaruan gagal
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Gagal mengambil pembaruan untuk %1$S;Gagal mengambil pembaruan untuk %1$S
+
+webappsDisabledInGuest=Penginstalan aplikasi dinonaktifkan dalam sesi tamu
