--- a/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,5 +97,8 @@ quit-button.tooltiptext.linux2 = Gadael %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Gadael %1$S (%2$S)
 
+panic-button.label = Anghofio
+panic-button.tooltiptext = Anghofio am beth hanes pori
+
 loop-call-button.label = Gwahodd rhywun i siarad
 loop-call-button.tooltiptext = Gwahodd rhywun i siarad
